Refactored make targets.

--- a/app/Makefile
+++ b/app/Makefile
@@ -1,5 +1,13 @@
-.PHONY: run
+.PHONY: all run build test
 
-run:
+all : | build run
+
+build :
+	docker build -t go-alpha .
+
+run :
+	docker run -p 8080:8080 --name go-alpha go-alpha
+
+test :
 	go get -d ./...
 	go run main.go
